--- a/partials/product.html
+++ b/partials/product.html
@@ -1,13 +1,1 @@
-<div class="large-4 columns">
-	<div class="sidebar" data-ng-repeat="taxonomy in taxonomies">
-		<h2>{{ taxonomy.name }}</h2>
-		<ul>
-			<li data-ng-repeat="taxon in taxonomy.root.taxons"><a href="{{ root + taxon.permalink }}">{{ taxon.name }}</a></li>
-		</ul>
-	</div>
-</div>
-
-<div class="large-8 columns">
-	<div data-product-directive product="currentProduct">
-	</div>
-</div>
+<div data-product-directive product="currentProduct"></div>
