modified paths. Paths include trailing '/', whilst roots do not

--- a/partials/taxon.html
+++ b/partials/taxon.html
@@ -1,2 +1,2 @@
 
-<div data-ng-repeat="product in products">{{ product.name }}</div>
+<div data-ng-repeat="product in products"><a href="{{ products_path + product.permalink }}">{{ product.name }}</a></div>
