--- a/partials/taxonomy.html
+++ b/partials/taxonomy.html
@@ -1,1 +1,1 @@
-<div data-ng-repeat="taxon in taxons">{{ taxon.name }}</div>
+<div data-ng-repeat="taxon in taxons"><a href="{{ taxon.permalink }}">{{ taxon.name }}</a></div>
