--- a/partials/product.html
+++ b/partials/product.html
@@ -1,1 +1,7 @@
-<div data-product-directive product="currentProduct"></div>
+<div data-product-image-gallery images="product.images"></div>
+
+<div class="name"><h2>{{ product.name }}</h2></div>
+<div class="price">{{ product.price }}</div>
+<div class="description">{{ product.description }}</div>
+
+<button class="add-to-cart" ng-click="addToCart()">Add to Cart</button>
