--- a/partials/store.html
+++ b/partials/store.html
@@ -1,11 +1,6 @@
-<div class="large-4 columns">
-	<div class="sidebar" data-ng-repeat="taxonomy in taxonomies">
-		<h2>{{ taxonomy.name }}</h2>
-		<ul>
-			<li data-ng-repeat="taxon in taxonomy.root.taxons"><a href="{{ store_path + taxon.permalink }}">{{ taxon.name }}</a></li>
-		</ul>
-	</div>
+<div class="large-4 columns" ui-view="sidebar">
+
 </div>
 
-<div class="large-8 columns" ui-view>
+<div class="large-8 columns" ui-view="main">
 </div>
