--- a/partials/store.html
+++ b/partials/store.html
@@ -1,6 +1,8 @@
-<div class="large-4 columns" ui-view="sidebar">
 
+
+<div class="row">
+	<div class="large-4 columns" ui-view="sidebar"></div>
+
+	<div class="large-8 columns" ui-view="main"></div>
 </div>
 
-<div class="large-8 columns" ui-view="main">
-</div>
