--- a/partials/store.html
+++ b/partials/store.html
@@ -1,4 +1,6 @@
-
+<div class="row">
+		<div class="large-12 columns" ui-view="header"></div>
+</div>
 
 <div class="row">
 	<div class="large-4 columns" ui-view="sidebar"></div>
@@ -6,3 +8,6 @@
 	<div class="large-8 columns" ui-view="main"></div>
 </div>
 
+<div class="row">
+		<div class="large-12 columns" ui-view="footer"></div>
+</div>
