Started building out cart

--- a/partials/product/product.html
+++ b/partials/product/product.html
@@ -4,4 +4,4 @@
 <div class="price">{{ product.price }}</div>
 <div class="description">{{ product.description }}</div>
 
-<button class="add-to-cart" ng-click="addToCart()">Add to Cart</button>
+<button class="add-to-cart" ng-click="addToCart(product)">Add to Cart</button>
