Can now add items to cart with varying quantities

--- a/partials/directives/shopping_cart.html
+++ b/partials/directives/shopping_cart.html
@@ -1,5 +1,5 @@
 <div ng-repeat="item in cartItems">
-	<div>{{ item.name }}</div>
+	<div><span>{{ item.name }}</span><span>Quantity: {{ item.quantity }}</span></div>
 </div>
 
 <div>{{ errorMessage }}</div>
