--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5891,11 +5891,32 @@ html {
 }
 #sidebar ul li {
   padding: 20px;
+  position: relative;
   list-style: none;
   border-bottom: 1px solid #4a4a4a;
+  cursor: pointer;
+  -webkit-transition: max-width 0.5s ease;
+  transition: max-width 0.5s ease;
 }
 #sidebar ul li a {
   color: #fff;
+  z-index: 5;
+  position: relative;
+}
+#sidebar ul li a:hover {
+  text-decoration: none;
+}
+#sidebar ul li:hover > .pusher {
+  max-width: 100px;
+  height: 100%;
+  background: #383838;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 1;
+}
+#sidebar ul li:first-child {
+  border-top: 1px solid #4a4a4a;
 }
 #search {
   background: #fff;
