--- a/public/less/style.less
+++ b/public/less/style.less
@@ -94,11 +94,39 @@ body, html {
 		width: 100%;
 		li {
 			padding: 20px;
+			position: relative;
 			list-style: none;
 			border-bottom: 1px solid lighten(@dark_gray, 10%);
+			cursor: pointer;
+			-webkit-transition: max-width .5s ease;
+			transition: max-width .5s ease;
+
 			a {
 				color:#fff;
+				z-index:5;
+				position: relative;
 			}
+
+			a:hover {
+				text-decoration: none;
+			}
+
+			.pusher {
+				height: 100%;
+				background: lighten(@dark_gray, 3%);
+				position: absolute;
+				left:0;
+				top:0;
+				z-index:1;
+			}
+		}
+
+		li:hover > .pusher {
+			max-width: 100px;
+		}
+
+		li:first-child {
+			border-top: 1px solid lighten(@dark_gray, 10%);
 		}
 	}
 }
