--- a/public/partials/admin/layout/sidebar.html
+++ b/public/partials/admin/layout/sidebar.html
@@ -1,7 +1,7 @@
 <div  id="sidebar" data-sidebar>
 	<ul>
 		<li><a>Orders</a></li>
-		<li><a>Products</a></li>
+		<li ng-click="go('products')"><a>Products</a></li>
 		<li><a>Customers</a></li>
 		<li><a>Data</a></li>
 		<li><a>Categories</a></li>
