--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5818,6 +5818,34 @@ td.visible-print {
     display: none !important;
   }
 }
+button {
+  border: 0;
+  padding: 15px;
+  font-weight: bolder;
+  color: #fff;
+  margin: 0;
+  float: left;
+  border-radius: 10px;
+}
+button.simple {
+  background: #51b1d2;
+  margin-right: 5px;
+  border-radius: 0 0 10px 10px;
+}
+button.advanced {
+  background: #123845;
+  float: left;
+  border-radius: 0 0 10px 10px;
+}
+button.add {
+  background: #277a96;
+}
+.product_controls .add {
+  float: right;
+  background: #73B143;
+  border-bottom: 2px solid #436727;
+  margin-top: 40px;
+}
 .strip_padding {
   padding-left: 0;
   padding-right: 0;
@@ -5864,6 +5892,18 @@ html {
 @media (min-width: 992px) {
   .main_container {
     margin-top: 74px;
+    height: 100%;
+  }
+  .main_container .backdrop {
+    width: 100%;
+    position: absolute;
+    background: #000;
+    opacity: 0.5;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 5;
   }
   .header_container {
     position: fixed;
@@ -5928,6 +5968,9 @@ html {
   padding: 20px;
   font-size: 24px;
   color: #303030;
+  -webkit-box-shadow: 1px 1px 2px 0px rgba(50, 50, 50, 0.2);
+  -moz-box-shadow: 1px 1px 2px 0px rgba(50, 50, 50, 0.2);
+  box-shadow: 1px 1px 2px 0px rgba(50, 50, 50, 0.2);
 }
 .logo {
   padding: 20px;
@@ -5938,5 +5981,17 @@ html {
 .product {
   background: #fff;
   padding: 20px;
-  margin-top: 20px;
+  margin-top: 10px;
+  border-radius: 5px;
+}
+.product_editor {
+  z-index: 10;
+  background: #fff;
+  border-radius: 10px;
+  padding: 40px;
+  width: 500px;
+  position: absolute;
+}
+#main {
+  padding: 0 15px 0 15px;
 }
