--- a/public/partials/admin/admin.html
+++ b/public/partials/admin/admin.html
@@ -9,6 +9,9 @@
 
 		<div class="col-lg-10 col-md-9 main_container col-lg-offset-2 col-md-offset-3">
 			<div data-ui-view="main" id="main"></div>
+			<div class="backdrop" ng-show="backdropSwitch"></div>
+
+			{{backdropSwitch}}
 		</div>
 	</div>
 </div>
